--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,17 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    <link href="%PUBLIC_URL%/css/font-awesome.min.css" rel="stylesheet">
+    <link href="%PUBLIC_URL%/css/bootstrap.min.css" rel="stylesheet">
+    <link href="%PUBLIC_URL%/css/style.css" rel="stylesheet">
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <script type="text/javascript" src=".%PUBLIC_URL%/js/popper.min.js"></script>
+    <script type="text/javascript" src="%PUBLIC_URL%/js/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="%PUBLIC_URL%/js/bootstrap.min.js"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
